solved some Marcello's notes. todo results and fallaway introduction(clearer)

--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -10,7 +10,7 @@ title={Large Language Model guided Protocol Fuzzing},
 booktitle={Proceedings of the 31st Annual Network and Distributed System Security Symposium (NDSS)},
 year={2024},}
 
-@inproceedings{Fallaway,
+@misc{Fallaway,
 author={Timme Bethe},
 title={Fallaway: High Throughput Stateful Fuzzing By Making AFL* State-Aware},
 year={2024},}
@@ -82,3 +82,65 @@ year={2024},}
 author = {Yu, Zhenhua and Liu, Zhengqi and Cong, Xuya and Li, Xiaobo and Yin, Li},
 year = {2024},
 title = {Fuzzing: Progress, Challenges, and Perspectives},}
+
+@inproceedings{grammarfuzzingwhitebox,
+author = {Godefroid, Patrice and Kiezun, Adam and Levin, Michael},
+year = {2008},
+title = {Grammar-based Whitebox Fuzzing},}
+
+@article{mutationgenerationbased,
+author = {Li, Jun and Zhao, Bodong and Zhang, Chao},
+year = {2018},
+title = {Fuzzing: a survey},}
+
+@misc{afl,
+  title = {{American Fuzzy Lop (AFL) Website}},
+  howpublished = {\url{https://lcamtuf.coredump.cx/afl/}},
+}
+
+@misc{lightftp,
+  title = {{LightFTP GitHub Repository}},
+  howpublished = {\url{https://github.com/hfiref0x/LightFTP}},
+}
+
+@misc{lighttpd,
+  title = {{Lighttpd GitHub Repository}},
+  howpublished = {\url{https://github.com/lighttpd}},
+}
+
+@inproceedings{learningbasedfuzzing,
+author = {Aichernig, Bernhard and Muskardin, Edi and Pferscher, Andrea},
+year = {2021},
+title = {Learning-Based Fuzzing of IoT Message Brokers},
+}
+
+@inproceedings{learningbasedfuzzing2,
+author = {Cheng, Hao and Li, Dongcheng and Zhao, Man and Li, Hui and Wong, W.},
+year = {2024},
+title = {A Comprehensive Review of Learning-based Fuzz Testing Techniques},}
+
+@misc{lighttpdusage,
+  title = {{Lighttpd Website}},
+  howpublished = {\url{https://www.lighttpd.net/2007/4/4/powered-by-lighttpd/}},
+}
+
+@misc{lighttpdusage2,
+  title = {{Lighttpd Wikipedia Page}},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Lighttpd}},
+}
+
+@misc{aflfuzzoneapproach,
+title={{AFL Approach}},
+howpublished={\url{https://afl-1.readthedocs.io/en/latest/motivation.html#the-afl-approach}},
+}
+
+@misc{tao2023gonet,
+  author = {Quanyu Tao},
+  title = {GONet: Gradient Oriented Fuzzing for Stateful Network Protocol},
+  year = {2023},
+}
+
+@misc{pathexplosion,
+title={{Path Explosion}},
+howpublished={\url{https://en.wikipedia.org/wiki/Path_explosion}},
+}
